Corregido el nombre del footer

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </main>
 
     <footer id="footer">
-        <p>Hecho por <a href="#" target="_blank">Franco</a></p>
+        <p>Hecho por <a href="https://srpache.github.io" target="_blank">Franco</a></p>
     </footer>
 
     </div>
